--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
             </div>
           </div>  
 
+
+          <div class="dropdown">
+            <button class="dropbtn">Network Links</button>
+            <div class="dropdown-content">
+              <a href="https://status.matax.gg" class="get-started-btn">Status Page</a>
+              <a href="https://discord.matax.gg" class="get-started-btn">Discord</a>
+            </div>
+          </div>  
+
+
         </div>
       </div>
 
