--- a/index.html
+++ b/index.html
@@ -61,31 +61,22 @@
               <li class="nav-item">
                 <a class="nav-link" href="price.html">Pricing</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
-              </li>
             </ul>
             <div class="quote_btn-container">
-              <form class="form-inline">
-                <button class="btn   nav_search-btn" type="submit">
-                  <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-              </form>
-              <a href="https://discord.matax.gg/">
-                Discord
-              </a>
 
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
+                Login
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" style="color:black;" href="https://billing.matax.gg">Billing Panel</a>
+                  <a class="dropdown-item" style="color:black;" href="https://panel.matax.gg">Hosting Panel</a>
                 </div>
               </li>
+
+              <a href="https://discord.matax.gg/">
+                Discord
+              </a>
 
             </div>
           </div>
